bug 127145 - split blocks with computed heights. a=asa, sr=kin, r=alexsavulov.